@@ -71,6 +71,7 @@ Changes for Perl Application Development and Refactoring Environment
       of Perl build systems (three of those correctly) (ADAMK)
     - Function List has resource locking around it and properly triggers a
       refresh when we show it for an already open document (ADAMK)
+    - "Goto Line" dialog now supports line and positions (AZAWAWI)
 
 0.55 2010.01.21
     - Add full list of file types to the View Document As menu (SZABGAB)
